# dnn_control

./: .gitignore
cpp/: visualize.py
cpp/build-dnn_control-Desktop-Debug/: Makefile  dnn_control
cpp/dnn_control/: CMakeCache.txt  CMakeLists.txt  Makefile  adaptivesimulation.cpp  adaptivesimulation.h  asteroid.cpp  asteroid.h  autoencoder.cpp  autoencoder.h  boostasteroid.cpp  boostasteroid.h  boostsimulator.cpp  boostsimulator.h  cmake_install.cmake  compile_boost_asteroid  compile_boost_simulator  compile_python_module  configuration.h  constants.h  controlledrungekutta.h  controller.cpp  controller.h  controller5d.cpp  controller5d.h  controlleracceleration.cpp  controlleracceleration.h  controlleranyd.h  controllerdeepneuralnetwork.cpp  controllerdeepneuralnetwork.h  controllerfullstate.cpp  controllerfullstate.h  controllerneuralnetwork.cpp  controllerneuralnetwork.h  controllerproportionalderivative.cpp  controllerproportionalderivative.h  datacollector.cpp  datacollector.h  dnn_control.pro  dnn_control.pro.user.78f5029  dnn_control.pro.user.caaaebe  (+85 more)
cpp/dnn_control/archive/: adaptivesimulation.h  controller5d.cpp  controlleracceleration.h  controlleranyd.cpp  controllerproportionalderivative.cpp  controllerproportionalderivative.h  fixedsimulation.cpp  fixedsimulation.h  hoveringproblem.cpp  hoveringproblem.h  hoveringproblemproportionalderivative.cpp  hoveringproblemproportionalderivative.h  pagmosimulationfullstate.cpp  pagmosimulationproportionalderivative.cpp  sensordatagenerator.cpp  sensorsimulatoracceleration.cpp  sensorsimulatoracceleration.h  sensorsimulatoranyd.cpp  sensorsimulatorpartialstate.cpp  sensorsimulatorpartialstate.h  simplerecurrentneuralnetwork.cpp  simulator.cpp  simulator.h  test.h  utility.cpp  utility.h
cpp/dnn_control/test/: sda  sda.cpp
python/autoencoder/: autoencoder.py  data_loader.py  data_normalizer.py  denoising_autoencoder.py  linear_regression.py  main.py  main_sa.py  main_sda.py  mlp.py  principal_component_analysis.py  sensor_data_loader.py  stacked_autoencoder.py  stacked_denoising_autoencoder.py  test_sa.py  test_sa2.py  test_sa_impl.py
python/deeplearning/: rbm.py
python/dnn_control/: asteroid.py  constants.py  controller.py  denoisingautoencoder.py  ellipsoidgravityfield.py  filewriter.py  fullstatecontroller.py  fullstatesensorsimulator.py  lspi.py  main.py  odesystem.py  pendulum.py  pidcontroller.py  sensordatagenerator.py  sensorsimulator.py  sensorsimulator5d.py  simulator.py  test.py  utility.py  visualization.py  visualize.py
python/dnn_control/boost_asteroid/: asteroid.cpp  asteroid.h  compile  constants.h  utility.cpp  utility.h  vector.h
python/dnn_control/boost_simulator/: test.py  utility.py
python/dnn_control/lspi/: lspi.py  pendulum.py  spacecraft.py
python/dnn_control/test/: autoencoder2d.py  denoisingautoencoder.py  hiddenlayer.py  neuralnetwork.py  outputlayer.py
python/visualization/: vactionset.py  vbbox.py  vconvexities.py  vconvexity.py  vevaluation.py  vforces.py  vgroundtrack.py  vheight.py  vic.py  visualize.py  vnninput.py  vobjfun.py  vperformance.py  vpostevaluation.py  vpostevaluations.py  vpredictions.py  vtrajectory.py  vtrajectoryplot.py  vvelheight.py  vvelocity.py
